--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Experience the future of music streaming with our modern, fast, and user-friendly Spotify clone. Your music, your way!" />
     <link rel="shortcut icon" href="./src/assets/icons/favicon.png" type="image/x-icon">
     <title>Spotify - Web Player: Music for everyone</title>
   </head>
